# nlctl

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  animation_base.cpp  animations.hpp  color.hpp  hid_device.cpp  hid_device.hpp  main.cc  main.cpp
include/: animation_base.hpp  animations.hpp  capture.hpp  hid_device.hpp  x11.hpp  zone.hpp
src/: capture_impl.cpp  color.cpp  hid_device.cpp  main.cpp  x11.cpp  zone.cpp
